<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.AskQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/blogo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Ask Question"
            android:textColor="@color/brandcolor"
            android:fontFamily="@font/blinkerbold"
            android:textSize="23sp"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"/>
        //Title
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="Title"
            android:textColor="@color/brandcolor"
            android:fontFamily="@font/blinkerbold"
            android:textSize="23sp"
            android:gravity="left"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="Be specific and imagine you're asking question to another person"
            android:textColor="@color/grey"
            android:fontFamily="@font/blinkerregular"
            android:textSize="14sp"
            android:gravity="left"/>
        <EditText
            android:id="@+id/ettitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/grey"
            android:fontFamily="@font/blinkerregular"
            android:textColor="@color/grey"/>

        //Body
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="Body"
            android:textColor="@color/brandcolor"
            android:fontFamily="@font/blinkerbold"
            android:textSize="23sp"
            android:gravity="left"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="Include all the information someone would nedd to answer your question."
            android:textColor="@color/grey"
            android:fontFamily="@font/blinkerregular"
            android:textSize="14sp"
            android:gravity="left"/>
        <EditText
            android:id="@+id/etbody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/grey"
            android:fontFamily="@font/blinkerregular"
            android:textColor="@color/grey"/>

        //Tags
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="Tags"
            android:textColor="@color/brandcolor"
            android:fontFamily="@font/blinkerbold"
            android:textSize="23sp"
            android:gravity="left"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="Add upto 5 tags to describe what your question is about."
            android:textColor="@color/grey"
            android:fontFamily="@font/blinkerregular"
            android:textSize="14sp"
            android:gravity="left"/>
        <EditText
            android:id="@+id/ettags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/grey"
            android:fontFamily="@font/blinkerregular"
            android:textColor="@color/grey"/>

        //Button
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnpost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Post"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/buttoncornerbrand"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/blinkerbold"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

</ScrollView>