...
                    android:textSize="14sp"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/blinkerregular"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvques"
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:isScrollContainer="false"/>
            </LinearLayout>
...
