...
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="5dp"
    android:background="@drawable/textlines"
    android:backgroundTint="@color/brandcolor">
    <LinearLayout
        android:id="@+id/llbutton"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
...
