...
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/blogo"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/stitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textSize="17dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
...
